2012-12-10	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* keyactions.cc: Toggling fullscreen displays a timed popup asking if you
	  want to keep the change or not. If yes, config is saved; if not, then full
	  screen is toggled back.

2012-12-09	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* exultmenu.cc: Fixing now relevant double-free in menu.
	* gamewin.cc: Clear the time queue before deleting unused NPCs (just in case).
	* tqueue.*, objs/animate.*: Fixed leak when loading game while an object is
	  playing SFX through Object_sfx; using time queue for it as it has the only
	  reference to the object.
	* gumps/AudioOptions_gump.cc: Memory leak on two buttons when enabling or
	  disabling audio.
	* gumps/VideoOptions_gump.cc: Double delete: set static variables to zero
	  after freeing them.
	* usecode/conversation.cc: Fixed bug #3001914: "Cutted texts in voiceovers
	  with Speech disabled" [sic].
	* exult.cc, imagewin/imagewin.cc: Missing space in video debug output. Fixed
	  "fill" and "fit" fill modes (and aspect correction) when scale is 1.
	* imagewin/imagewin.cc: Fixed resolution changed oddities from the previous
	  commit while still keeping the fix for scale 1.
	* usecode/ucinternal.cc, usecode/useval.*: Fixed bug #3001289: "Strange
	  things in NPC dialogues", also fixing a couple of bugs in SI usecode.
	* usecode/useval.*: Fixing dumb mistake: std::less is operator<, not operator-.
	* actors.cc: Changed NPCs to leave dead bodies only if they have actual body
	  information (and aren't flagged by monster data otherwise) instead of
	  leaving a default dead body. Fixes the Beatrix part of bug #3186722: "SI:
	  Body issues in Shamino's Castle".
	* usecode/ucinternal.cc: remove_party_items should return 1 only if it has
	  really removed any items (fixes Cantra's body in bug #3186722: "SI: Body
	  issues in Shamino's Castle").
	* exult.cc: Working around an SDL 1.2 issue with touchpads in full-screen
	  programs under X11.